# tic-tac-toe

./: README.md  index.html  tic-tac-toe.cabal
app/: Main.hs
script/: script.js
style/: style.css
