cabal-version:      3.0
name:               tic-tac-toe
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
-- copyright:
build-type:         Simple
extra-doc-files:    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable tic-tac-toe
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      h-raylib >= 5.1.1.0,
                      vector >= 0.13.1.0,
                      transformers >= 0.6.1.1
    hs-source-dirs:   app
    default-language: Haskell2010
